update message api
