# Woong_Server/swagger/woong_api.yml
@@ -959,7 +959,10 @@ paths:
               - market_id
               - content
             properties:
-              market_id:
+              room_user_id:
+                type: integer
+                example: 1
+              market_user_id:
                 type: integer
                 example: 1
               content:
@@ -1626,6 +1629,9 @@ definitions:
                   type: string
                   example: "현주마켓"
                 market_id:
+                  type: integer
+                  example: 1
+                room_user_id:
                   type: integer
                   example: 1
                 chatting_room_id:
